--- a/latex/manual/example/main.tex
+++ b/latex/manual/example/main.tex
@@ -14,7 +14,8 @@
 \usepackage{fixltx2e} 
 \usepackage{import}
 \usepackage{makeidx}
-
+%Recommended for math formulas, provides some more powerful commands and fixes some quirks od ansmath
+\usepackage{mathtools}
 \makeindex
 
 \begin{document}
