--- a/latex/manual/example/math01/simple_figure.tex
+++ b/latex/manual/example/math01/simple_figure.tex
@@ -1,3 +1,6 @@
-A math formular like this: $ \sqrt{x^2}=x $ can be added within text\index{Math formular!inline}
+A math formular can be a separate figre with a caption as well. This will appear in the list of figures at the end of the document.
+\begin{equation}
+ \sqrt{x^2}=x 
+\end{equation} 
 
 
