--- a/latex/manual/example/math01/simple_inline.tex
+++ b/latex/manual/example/math01/simple_inline.tex
@@ -1,1 +1,1 @@
-\index{Math formular!inline}A math formular can be added to normal text using \$\$ Formular \$\$. E.g. the following text
+\index{Math formular!inline}A math formular like $ \sqrt{x^2}=x $ can be added inline to normal text using
