--- a/latex/manual/example/table01/main.tex
+++ b/latex/manual/example/table01/main.tex
@@ -1,4 +1,4 @@
-\newcommand\example[2]{\subsection{#1}\subsubsection{Result}\input{table01/#2}\subsubsection{Code}\verbatiminput{table01/#2}}
+\renewcommand\example[2]{\subsection{#1}\subsubsection{Result}\input{table01/#2}\subsubsection{Code}\verbatiminput{table01/#2}}
 \section{Tables}
 This is the simplest form of a table. But it will not show in the list of tables, because it is not surrounded by \textbackslash begin\{table\} and \textbackslash end\{table\} tags.
 \example{Simple tabular}{simpletabular.tex}
