Add more latex examples, fix template, add emacs example init.el file

--- a/latex/manual/example/main.tex
+++ b/latex/manual/example/main.tex
@@ -1,39 +1,52 @@
 \documentclass[11pt,twoside,a4paper]{article}
 
-%Input source files
-\usepackage{verbatim}
-%Tables: Span cell over multiple rows
-\usepackage{multirow}
-%Figures: Avoid floating (option [H])
-\usepackage{float}
-%Special characters, euro symbol, etc.
-\usepackage{textcomp} 
-%Include graphics in document
-\usepackage{graphicx}
-%command textsubscript 
-\usepackage{fixltx2e} 
-\usepackage{import}
-\usepackage{makeidx}
-%Recommended for math formulas, provides some more powerful commands and fixes some quirks od ansmath
-\usepackage{mathtools}
-\makeindex
-
+ %Input source files
+ \usepackage{verbatim}
+ %Input source files
+ \usepackage{listings}
+ %Tables: Span cell over multiple rows
+ \usepackage{multirow}
+ %Figures: Avoid floating (option [H])
+ \usepackage{float}
+ %Special characters, euro symbol, etc.
+ \usepackage{textcomp} 
+ %Include graphics in document
+ \usepackage{graphicx}
+ %command textsubscript 
+ \usepackage{fixltx2e} 
+ \usepackage{import}
+ \usepackage{makeidx}
+ %Recommended for math formulas, provides some more powerful commands and fixes some quirks od ansmath
+ \usepackage{mathtools}
+ \usepackage{pdfcomment}
+ \usepackage{hyperref}
+ \usepackage{todo}
+ \usepackage{color}
+ \makeindex
+ \lstset{ %
+   backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{
+   basicstyle=\footnotesize,        % the size of the fonts that are used for the code
+}
 \begin{document}
 \input{title/main.tex}
+\input{tools/main.tex}
+\vfill \pagebreak
+\input{foreword/main.tex}
 \tableofcontents
 \vfill
 Below the table of content is a \begin{verbatim}\vfill\end{verbatim} to avoid the toc to be stretched to fill the page
 \vfill
 \vfill
-\input{tools/main.tex}
+\vfill \pagebreak
 \input{standard01/main.tex}
-\verbatiminput{standard01/main.tex}
 \vfill \pagebreak
 \input{characters01/main.tex}
 \vfill \pagebreak
 \input{math01/main.tex}
 \vfill \pagebreak
 \input{table01/main.tex}
+\vfill \pagebreak
+\input{graph01/main.tex}
 \vfill \pagebreak
 \appendix
 \listoftables
