--- a/latex/manual/example/math01/main.tex
+++ b/latex/manual/example/math01/main.tex
@@ -1,4 +1,4 @@
-\newcommand\example[2]{\subsection{#1}\subsubsection{Result}\input{math01/#2}\subsubsection{Code}\verbatiminput{math01/#2}}
+\setfolder{math01}
 \section{Math Formulars}
 \example{Math formulars in Normal Text}{simple_inline.tex}
 \example{Math formulars as Separated Figures}{simple_figure.tex}
