--- a/latex/manual/template/main.tex
+++ b/latex/manual/template/main.tex
@@ -1,24 +1,49 @@
 \documentclass[11pt,twoside,a4paper]{article}
-\usepackage{verbatim}
-\usepackage{multirow}
-\usepackage{float}
-\usepackage{textcomp}
-\usepackage{graphicx}
-\usepackage{fixltx2e}
+
+ %Input source files
+ \usepackage{verbatim}
+ %Input source files
+ \usepackage{listings}
+ %Tables: Span cell over multiple rows
+ \usepackage{multirow}
+ %Figures: Avoid floating (option [H])
+ \usepackage{float}
+ %Special characters, euro symbol, etc.
+ \usepackage{textcomp} 
+ %Include graphics in document
+ \usepackage{graphicx}
+ %command textsubscript 
+ \usepackage{fixltx2e} 
+ \usepackage{import}
+ \usepackage{makeidx}
+ %Recommended for math formulas, provides some more powerful commands and fixes some quirks od ansmath
+ \usepackage{mathtools}
+ \usepackage{pdfcomment}
+ \usepackage{hyperref}
+ \usepackage{todo}
+ \usepackage{color}
+ \makeindex
+ \lstset{ %
+   backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{
+   basicstyle=\footnotesize,        % the size of the fonts that are used for the code
+}
 \begin{document}
 \input{tools/main.tex}
 \input{title/main.tex}
+\vfill \pagebreak
+\input{foreword/main.tex}
 \tableofcontents
-\vfill
+\vfill \pagebreak
 \input{chapter01/main.tex}
+%\vfill \pagebreak
 %\input{chapter02/main.tex}
 %\input{chapter03/main.tex}
 %...
 \pagebreak
 \appendix
+%\vfill \pagebreak
 %\input{appendix01/main.tex}
-\section{List of Tables}
 \listoftables
-\section{List of Figures}
 \listoffigures
+\printindex
 \end{document}
