--- a/latex/manual/example/standard01/main.tex
+++ b/latex/manual/example/standard01/main.tex
@@ -1,13 +1,7 @@
-\pagebreak
+\setfolder{standard01}
 \section{A Standard Section}
-\subsection[Subsection Alternate Title for TOC]{A Standard Subsection}
-There are just a few things in this section, starting with so called ,,quotes'', footnotes\footnote{They can come handy} \footnote{Multiple are possible}
-\begin{itemize}
-\item{Item lists
-  \begin{enumerate}
-  \item{With nested items}
-  \item{With enumerations}
-  \end{enumerate}}
-\item{German umlaute \"a\"o\"u\"A\"O\"U}
-\end{itemize}
-\subsection*{An Unnumbered Standard Subsection}
+\example{Subsection Alternate Title for TOC}{alternate_topic.tex}
+\example{Enumeration}{enumeration.tex}
+\example{Footnote}{footnote.tex}
+\example{Unnumbered Section}{unnumbered_section.tex}
+\example{Paragraph Indent}{paragraph.tex}
