--- a/latex/manual/template/title/main.tex
+++ b/latex/manual/template/title/main.tex
@@ -2,7 +2,7 @@
 \begin{center}
 \textsc{\huge Latex Example Document} \\[2cm]
 \HRule \\[1cm]
-\textsc{\large Thorsten M\"ollers, \date{\today}} \\[1cm]
+\textsc{\large Thorsten M\"ollers} \\[1cm]
 \HRule \\[1cm]
 \end{center}
 \end{titlepage}
